--- a/assets/src/scss/_config/_variables.scss
+++ b/assets/src/scss/_config/_variables.scss
@@ -5,18 +5,24 @@
 // black and white
 $c_white: #FFF;
 $c_alabaster: #fcfcfc;
-$c_alto : #d0d0d0;
+$c_alto: #d0d0d0;
 $c_silver_chalice: #9e9e9e;
 $c_mine_shaft: #313131;
 $c_black: #000;
 
 $c_sea_green: #2e7d32;
 
+$c_error_dark: #721c24;
 $c_thunderbird: #b71c1c;
 $c_carnation: #F85C4F;
 
 $c_cerulean: #039be5;
 $c_cornflower_blue: #6E8CEE;
+
+$c_sharade: #252635;
+$c_lochmara: #0089d0;
+$c_lima: #3ab03e;
+$c_sushi: #8CC63F;
 
 /* =========================================
 		Z-INDEX
