--- a/assets/src/scss/_elements/_input.scss
+++ b/assets/src/scss/_elements/_input.scss
@@ -7,21 +7,26 @@ $module: 'input';
   &__el {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid $c_silver_chalice;
-    color: $c_black;
+    border-bottom: 2px solid transparentize($c_white, .5);
+    color: transparentize($c_white, .5);
     border-radius: 0;
     outline: none;
-    height: 3rem;
+    //height: 3rem;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     margin: 0 0 20px 0;
-    padding: 0;
+    //padding: 0;
     box-shadow: none;
     transition: $t_medium_animation hpmEasing('outSine');
+    padding: 12px 0;
+
+    option {
+      color: $c_black;
+    }
 
     &:focus {
-      color: $c_cornflower_blue;
-      border-color: $c_cornflower_blue;
+      color: $c_white;
+      border-color: $c_white;
     }
 
     @include hpmPlaceholder(true) {
